--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@types/jasminewd2": "^2.0.8",
-    "ts-node": "^9.0.0"
+    "ts-node": "^9.0.0",
+    "protractor-beautiful-reporter": "^1.3.6"
   }
 }
